Enhance configuration registry with stricter null checks and improved test cases
- Enforce `Objects.requireNonNull` in `setItemValue` for better null safety.
- Add unit tests for duplicate item registration, null item registration, and missing item scenarios.
- Simplify enum instance retrieval and optimize stream operations in test utilities.